fix display:hide dialog when dialog is closed to prevent white space between end of content and footer

--- a/assets/p-dialog.css
+++ b/assets/p-dialog.css
@@ -1,12 +1,5 @@
 
-#dialog {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-}
+
 .dialog-content {
     display: flex;
     flex-direction: column;
